<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Title Bar -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/garnet"
        android:fontFamily="@font/irish_grover"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/header_message"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <!-- Question Container -->
    <LinearLayout
        android:id="@+id/questionContainer"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="50dp"
        android:background="@color/grey"
        android:fontFamily="@font/irish_grover"
        android:gravity="center"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <!-- Timer TextView -->
            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="19sp"
                android:textColor="@color/red"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"/>

            <!-- Question TextView -->
            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="21sp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_below="@id/tvTimer"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </LinearLayout>

    <!-- Options Container -->
    <LinearLayout
        android:id="@+id/optionsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/questionContainer"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/irish_grover"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Option A -->
        <Button
            android:id="@+id/btnOptionA"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/garnet"
            android:fontFamily="@font/irish_grover"
            android:text="@string/option_a"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <!-- Option B -->
        <Button
            android:id="@+id/btnOptionB"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/garnet"
            android:fontFamily="@font/irish_grover"
            android:text="@string/option_b"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <!-- Option C -->
        <Button
            android:id="@+id/btnOptionC"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/garnet"
            android:fontFamily="@font/irish_grover"
            android:text="@string/option_c"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>